# devtools-course-practice

./: .gitignore  CMakeLists.txt  README.md  codecov.yml  devtools_test.cmake  index.html  run_cpplint.cmake
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
.run/: BuildAll.run.xml
belan_intersectio_lab3/: CTestTests.txt
belan_intersectio_lab3/application/: application.cpp
belan_intersectio_lab3/test/: savchuk_intersectio_test.cpp
devtools-course-practice-build/: CMakeCache.txt
docs/: Doxyfile  conf.py  index.html
kokin_i_station_sorting/application/: sort_station_application.cpp
kokin_i_station_sorting/src/: sort_station.cpp  sort_station_app.cpp
kokin_i_station_sorting/test/: test_kokin_i_station_sorting.cpp
lab-guide/: lab-1-setup.md  lab-2-library.md  lab-3-application.md  setup.md  topics.md
lab-guide/archive/: lab-template.md
label_bot/: index.js  package.json
modules/30_rule/: CTestTests.txt  README.md
modules/Ceasar_cipher/: CMakeLists.txt  CTestTests.txt
modules/Knight_Moves/: README.md
modules/Kruskal_algorithm/: CTestTests.txt  README.md
modules/Pqueue/: CTestTests.txt
modules/Vasilev_i_lab2/: CMakeLists.txt  CTestTests.txt
modules/Vigener_cipher/: CMakeLists.txt  CTestTests.txt
modules/algorithm-huffmana/: CMakeLists.txt  CTestTests.txt
modules/avl-tree/: CTestTests.txt
modules/bakhtiarov_a_priority_queue/: CTestTests.txt
modules/batcher-mergesort/: CTestTests.txt
modules/belan_bulls_cows_lab2/: CTestTests.txt
modules/belan_intersectio_lab3/: CTestTests.txt
modules/binary_search/: CMakeLists.txt  CTestTests.txt
modules/binary_search/application/: main.cpp
modules/binary_search/include/: binary_search.h  search_engine.h
modules/binary_search/src/: search_engine.cpp
modules/binary_search/test/: test_binary_search.cpp  test_main.cpp
modules/bit_array/: CTestTests.txt  README.md
modules/bodrov_daniil_fibonacci_heap/: CMakeList.txt  CMakeTests.txt  CTestTests.txt
modules/book_discount/: CMakeLists.txt  CTestTests.txt
modules/book_discount/test/: CMakeLists.txt  test_calc_price.cpp  test_calculate_price_application.cpp
modules/borisov_s_stack/: CTestTests.txt
modules/borovkov_s_sort/: CTestTests.txt
modules/btree_out_search/: CTestTests.txt  README.md
modules/bulls-n-cows/: CTestTests.txt
modules/chuvashov_a_ra_convertor/: CTestTests.txt
modules/combination_generator/: CMakeLists.txt  CTestTests.txt  README.md
modules/complex-calc/: CMakeLists.txt
modules/complex-number/: CTestTests.txt
modules/connectivity_components/: CTestTests.txt
modules/conv-and-calc/: CTestTests.txt
modules/converter-arabic-numerals/: CTestTests.txt
modules/conways_game_of_life/: CTestTests.txt
modules/deposit_calc/: CTestTests.txt
modules/dheap/: CTestTests.txt
modules/dijkstras-algorithm/: CTestTests.txt
modules/dostavalov_s_knuth_morris_pratt/: CTestTests.txt
modules/euler_func/: CMakeLists.txt  CTestTests.txt  README.md
modules/fedotov_k_set/: CTestTests.txt
modules/filatov_m_double_linked_list/: CMakeLists.txt  CTestTests.txt
modules/fraction-calc-by-using-gcd/: CTestTests.txt
modules/general-subseq/: CTestTests.txt
modules/graph_comp_shem_a/: CMakeLists.txt  CTestTests.txt
modules/grosfeld-cipher/: CTestTests.txt  README.md
modules/hanoi_tower/: CMakeLists.txt  CTestTests.txt
modules/hashmap/: hashmap.cpp  hashmap.h  test_hashmap.cpp  test_main.cpp
modules/interpolation-search/: CMakeLists.txt  CTestTests.txt
modules/intersectLineAndPlane/: CMakeLists.txt  CTestTests.txt  README.md
modules/intersection_line/: CMakeLists.txt  CTestTests.txt  README.md
modules/ivanchenko_a_metrics/: CTestTests.txt
modules/ivanov_n_greatest_inc_subseq/: CMakeLists.txt  CTestTests.txt
modules/json-deserializer/: CMakeLists.txt  CTestTests.txt  README.md
modules/kachalov_m_calc_polygon/: CMakeLists.txt  CTestTests.txt
modules/karagodin_a_objvolumes/: CMakeLists.txt  CTestTests.txt
modules/kashin_s_lab2/: CMakeLists.txt  CTestTests.txt
modules/kasimtcev_r_polskaya_zapis/: CMakeLists.txt  CTestTests.txt
modules/khodyrev_f_point_hits_a_triangle/: CTestTests.txt
modules/khramov_i_lab2/: CTestTests.txt
modules/kirillov_m_quadratic_solution/: CTestTests.txt
modules/kiselev_i_billinear_interpolation/: CMakeLists.txt  CTestTests.txt
modules/kistrimova_e_mod_stack_lab2/: CTestTests.txt
modules/kochetov_n_djarvis/: CTestTests.txt
modules/kokin_i_station_sorting/: CTestTests.txt
modules/kokin_sort_station_org/: CMakeLists.txt
modules/konovalov_i_euler_f_lab2/: CTestTests.txt
modules/kozlov_m_d_heap_lab3/: CTestTests.txt
modules/kozlov_m_graph_diam/: CMakeLists.txt  CTestTests.txt
modules/kriseev_m_vector_3d/: CMakeLists.txt
modules/kriseev_m_vector_3d/include/: vector_3d.h
modules/kriseev_m_vector_3d/src/: vector_3d.cpp
modules/kriseev_m_vector_3d/test/: test_main.cpp  vector_3d_tests.cpp
modules/kudinov_n_conways_game_of_life/: CMakeLists.txt  CTestTests.txt
modules/kudinov_n_conways_game_of_life/application/: game_of_life_lab3.cpp
modules/kudinov_n_conways_game_of_life/include/: conways_game_of_life.h  game_of_life_app.h
modules/kudinov_n_conways_game_of_life/src/: conways_game_of_life.cpp  game_of_life_app.cpp
modules/kudinov_n_conways_game_of_life/test/: test_kudinov_n_conways_game_of_life.cpp  test_main.cpp
modules/kulaev_e_increasing_the_contrast_lab2/: CMakeLists.txt  CTestTests.txt
modules/kulikov_a_lab2/: CTestTests.txt
modules/kutarin_a_lab2/: CTestTests.txt
modules/kuznetsov_a_lab2/: CTestTests.txt
modules/largest-subseq/: CMakeLists.txt  CTestTests.txt
modules/lesnikov_long_number/: CMakeLists.txt  CTestTests.txt  README.md
modules/matrix_operations/: CMakeLists.txt  (+1 more)
modules/mukhin_i_numerical_integration/src/: CMakeLists.txt  integration_methods.cpp  numerical_integration_app.cpp  numerical_integrator.cpp
modules/nedelin_d_book_discount_lab2/application/: CMakeLists.txt  application.cpp
modules/triangle-point/test/: CMakeLists.txt  test_main.cpp  test_triangle_point.cpp
myapp-build/: CMakeCache.txt
(+1233 files in other folders)
